Source/WebCore/rendering/style/StyleContentAlignmentData.h
@@ -27,6 +27,10 @@
 
 #include "RenderStyleConstants.h"
 
+namespace WTF {
+class TextStream;
+}
+
 namespace WebCore {
 
 class StyleContentAlignmentData {
